# communicator_interface

./: LICENSE  README.md  README_esp.md  main.py  pyproject.toml  requirements.txt
helpers/: gui_commands.py  plot_commands.py  serial_commands.py
